Add requirements and read

--- a/Draft Processing and Analysis.ipynb
+++ b/Draft Processing and Analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "hideCode": true,
@@ -1994,15 +1994,6 @@
    "source": [
     "How many are owned by companies registered in the British Crown Dependencies and Overseas Territories? Has this changed since 2015?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2045,7 +2036,7 @@
    "threshold": 4,
    "toc_cell": true,
    "toc_section_display": "block",
-   "toc_window_display": true,
+   "toc_window_display": false,
    "widenNotebook": false
   }
  },
